syntax = "proto3";
package user;

message Message {
  uint32 length = 1;
  Type type = 2;
  oneof content {
    bytes full = 3;
    Chunk chunk = 4;
  }

  message Chunk {
    uint32 id = 1;
    uint32 number = 2;
    bytes content = 4;
  }

  enum Type {
    STRING = 0;
    U_INT_8_ARRAY = 1;
  }
}
// AFTER `npm run proto` command. Copy this:

// /** Type enum. */
// enum Type {
//     STRING = 0,
//     U_INT_8_ARRAY = 1
// }

// INTO src/proto/Protobuf.d.ts just after

// public static decode(reader: ($protobuf.Reader|Uint8Array), length?: number): user.Message.Chunk;
// }
